[package]
name = "shared"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0"
nalgebra = "*"
ncollide2d = "*"

serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.js-sys]
version = "*"
features = [

]

[dependencies.rand]
version = "*"
features = ['wasm-bindgen']

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'console',
  'CanvasRenderingContext2d',
  'DedicatedWorkerGlobalScope',
  'Worker'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
