[package]
authors = ["Jared Forsyth"]
name = "zenphoton-worker"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version="0.2", features=['serde-serialize']}
num-traits = "0"
nalgebra = "*"
ncollide2d = "*"

shared = { path="../../shared" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = false }

[dependencies.js-sys]
version = "*"
features = [

]

[dependencies.rand]
version = "*"
features = ['wasm-bindgen']

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'ImageBitmap',
  'console',
  'CanvasRenderingContext2d',
  'DedicatedWorkerGlobalScope',
  'MessageEvent'
]